--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -32,14 +32,14 @@
             android:exported="true"
             android:windowSoftInputMode="adjustPan"></activity>
         <activity
-            android:name=".AnadirUsuario"
-            android:exported="true"></activity>
-        <activity
             android:name=".SeleccionarCarrera"
             android:exported="false" />
         <activity
             android:name=".EligeModo"
             android:exported="true"></activity>
     </application>
+
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"
+        android:maxSdkVersion="28" />
 
 </manifest>
